<resources>
  <string name="app_name">Voca Study</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="makeAList">MAKE A LIST</string>
  <string name="ListName">List Name</string>
  <string name="ADD">ADD</string>
  <string name="Study">STUDY</string>
  <string name="Cancel">CANCEL</string>
  <string name="Modify">MODIFY</string>
  <string name="Word">Word</string>
  <string name="Meaning">Meaning</string>
  <string name="WannaDelete">Do you want to delete?</string>
  <string name="Delete">DELETE</string>
  <string name="NoWordOnTheList">There\'s no word on the list.</string>
  <string name="WordAlreadyExist">Word already exist</string>
  <string name="EnteredCorrectly">Entered correctly</string>
  <string name="DoNotLeaveEmpty">Please do not leave word and meaning empty</string>
  <string name="Search">Search</string>
  <string name="StudyInverse">Study🔄</string>
  <string name="List">List</string>
  <string name="SameWord">There\'s already the same word.</string>
  <string name="noSearchResult">No search result</string>
</resources>