<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".AddWord">

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbarModifyTable"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:layout_editor_absoluteY="-2dp" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="10dp"
    tools:layout_editor_absoluteY="10dp">

    <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:background="#3BBFBFBF"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="30dp">

        <EditText
          android:id="@+id/editTextAddWord"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10dp"
          android:layout_marginTop="30dp"
          android:layout_marginRight="10dp"
          android:hint="@string/Word"
          android:maxLength="70"
          android:singleLine="true"
          android:textSize="16sp" />

        <EditText
          android:id="@+id/editTextAddMeaning"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10dp"
          android:layout_marginTop="20dp"
          android:layout_marginRight="10dp"
          android:hint="@string/Meaning"
          android:maxLength="70"
          android:singleLine="true"
          android:textSize="16sp" />

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginTop="30dp"
          android:orientation="horizontal">

          <Button
            android:id="@+id/btnCancelWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="#C86C6C6C"
            android:text="@string/Cancel" />

          <Button
            android:id="@+id/btnAddWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="#27A62C"
            android:text="@string/ADD" />
        </LinearLayout>

      </LinearLayout>
    </FrameLayout>

    <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1">

    </FrameLayout>

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>